# mjpeg-motion-detector

./: CMakeLists.txt  README.md
include/: generate_gaussian.hpp  jpeg_decompressor.hpp  motion_detector.hpp  open_cl_interface.hpp
kernels/: blur_and_scale_horizontal.cl  blur_and_scale_vertical.cl  stabilize_bg_mvt.cl
src/: generate_gaussian.cc  jpeg_decompressor.cc  main.cc  motion_detector.cc  open_cl_interface.cc
test-images/: 2x1-grayscale-pixels-grayscale.ppm  2x1-grayscale-pixels-rgb.ppm  3x3-color-pixels-grayscale.ppm  3x3-color-pixels-rgb.ppm  9x9-color-pixels-grayscale.ppm  9x9-color-pixels-rgb.ppm
tests/: benchmarks.cc  generate_gaussian.test.hpp  jpeg_decompressor.test.hpp  motion_detector.test.hpp  tests.cc
